# memory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: com.pms.sync.plist  default.toml
deploy/: deploy-frontend.sh  ec2-setup.sh  memory.service  nginx.conf
docs/: API.md  ARCHITECTURE.md  ATTENTION.md  FEDERATED.md  MOBILE.md  MULTIMODAL.md  THEORY.md  VISION.md
docs/help/: ADMIN.md  AI_ASSISTANT.md  DATA_SOURCES.md  GETTING_STARTED.md  INDEX.md  KEYBOARD_SHORTCUTS.md  MEMORIES.md  USER_GUIDE.md
scripts/: recategorize_memories.py  run_plm.py  run_sync.py  setup_auth.py  setup_plm.py  synthesize_plm.py  test_plm_pipeline.py  test_setup.py  test_slm.py  train_plm.py
src/memory/: __init__.py  cli.py
src/memory/api/: __init__.py  memory_api.py
src/memory/attention/: __init__.py  cache.py  core.py  fusion.py  integration.py  layer.py
src/memory/auth/: __init__.py  mfa.py  middleware.py  models.py  password.py  store.py
src/memory/export/: __init__.py  formats.py
src/memory/federated/: __init__.py  client.py  compression.py  privacy.py  server.py
src/memory/ingestion/: __init__.py  content_processor.py  coordinator.py  enrichment.py
src/memory/ingestion/parsers/: __init__.py  claude_history.py
src/memory/ingestion/sources/: __init__.py  base.py  browser.py  cloud.py  code.py  communication.py  documents.py  llm_tracker.py  media.py  registry.py  social.py  social_media.py
src/memory/integrations/: __init__.py  claude_code.py
src/memory/knowledge/: __init__.py  extractor.py  store.py
src/memory/llm/: __init__.py  augmentation.py  embeddings.py  slm.py
src/memory/mobile/: __init__.py  api.py  notifications.py  sync.py
src/memory/multimodal/: __init__.py  audio.py  image.py  video.py
src/memory/pruning/: __init__.py  analyzer.py  coordinator.py  filters.py
src/memory/query/: __init__.py  interface.py
src/memory/scheduler/: __init__.py  sync_scheduler.py
src/memory/schema/: __init__.py  domain.py  identity.py  memory_entry.py  relationship.py
src/memory/slm/: __init__.py  continuous.py  data.py  learning.py  model.py  trainer.py
src/memory/storage/: __init__.py  base.py  dict_store.py  lancedb_store.py  manager.py  sqlite_store.py
src/memory/web/: __init__.py  app.py  connections.py  federated_api.py  llm_compare.py
src/memory/web/templates/: index.html
tests/: __init__.py  conftest.py  test_attention.py  test_auth.py  test_basic.py  test_federated.py  test_help_api.py  test_ingestion.py  test_mobile.py  test_multimodal.py  test_schema.py  test_storage.py
