[project]
name = "plm"
version = "0.1.0"
description = "Personal Language Model - Create personalized AI from your digital life"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PLM Contributors"}
]
keywords = [
    "plm",
    "personal-language-model",
    "memory",
    "ai",
    "llm",
    "slm",
    "fine-tuning",
    "personalization",
    "transformer",
    "lora",
    "vector-database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lancedb>=0.4.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "toml>=0.10.2",
    "aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://github.com/rod-higgins/memory"
Documentation = "https://github.com/rod-higgins/memory/docs"
Repository = "https://github.com/rod-higgins/memory"
Issues = "https://github.com/rod-higgins/memory/issues"

[project.optional-dependencies]
# For semantic search with local embeddings
embeddings = [
    "sentence-transformers>=2.3.0",
]

# For web UI
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "cryptography>=42.0.0",
]

# For development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# For PLM training (requires GPU)
tuning = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
]

# For multi-modal processing (images, audio, video)
multimodal = [
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.9.0",
    "librosa>=0.10.0",
    "openai-whisper>=20231117",
    "pyannote.audio>=3.1.0",
    "scenedetect>=0.6.0",
]

# Full installation
all = [
    "plm[embeddings,tuning,web,multimodal]",
]

[project.scripts]
plm = "memory.cli:app"
memory = "memory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N803",   # Argument name should be lowercase - allow Q, K, V for attention math
    "N806",   # Variable in function should be lowercase - allow Q, K, V for attention math
    "N812",   # Lowercase imported as non-lowercase - allow F for functional
    "N801",   # Class name should use CapWords - allow iMessageSource
    "N818",   # Exception should be named with Error suffix - allow HTTPException
    "E741",   # Ambiguous variable name - allow l in list comprehensions
    "E501",   # Line too long - handle manually for edge cases
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_torch: marks tests that require PyTorch",
    "requires_embeddings: marks tests that require sentence-transformers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
